[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/pausemenu.gd" type="Script" id=1]
[ext_resource path="res://Jellee-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://menu/mouse.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/clic.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=3]
size = 128
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect3:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 3.24901, 1 ),
"update": 0,
"values": [ Vector2( 250, 720 ), Vector2( 640, 720 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect4:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 3.24901, 1 ),
"update": 0,
"values": [ Vector2( 250, 720 ), Vector2( 640, 720 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect4:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 3.24901, 1 ),
"update": 0,
"values": [ Vector2( 1030, 0 ), Vector2( 640, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect3:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect4:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect3:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node2D:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect4:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 1030, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect3:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -250, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 520 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect5:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.462745 ) ]
}

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect5" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -200.0
margin_right = 1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ColorRect"]
margin_left = 250.0
margin_top = 28.0
margin_right = 1030.0
margin_bottom = 191.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.733333, 0.733333, 0.733333, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.388235, 0.388235, 1 )
enabled_focus_mode = 0
text = "[Continue]"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_top = 720.0
margin_right = 1280.0
margin_bottom = 920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="ColorRect2"]
margin_left = 250.0
margin_right = 1030.0
margin_bottom = 163.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.733333, 0.733333, 0.733333, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.388235, 0.388235, 1 )
enabled_focus_mode = 0
text = "[Quit]"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = -250.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 1280.0
margin_right = 1530.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/menu = SubResource( 4 )
anims/pauz = SubResource( 5 )

[node name="Node2D" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.667

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
